# GetJobHub

./: .gitignore  README.md  pyproject.toml  run.bat  wrangler.jsonc
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: categories.py  saved.py  scrape.py  stats.py  vacancies.py
app/core/: celery_app.py  config.py  database.py
app/models/: __init__.py  dead_letter.py  job.py  saved.py
app/schemas/: category.py  saved.py  scrape.py  stats.py  vacancy.py
app/scrapers/: arbeitnow.py  base.py  djinni.py  dou.py  himalayas.py  registry.py  remotejobs.py  remoteok.py  remotive.py  workua.py
app/services/: categories.py  matching.py  saved.py  scraping.py  stats.py  vacancies.py
app/tasks/: scrape.py
getjobhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 0001_init.sql
src/: worker.js
static/: app.js  index.html  styles.css
