[project]
name = "getjobhub"
version = "0.1.0"
description = "Distributed job aggregator engine for UA job sources"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.32",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
